--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dang xink cho Hoai Luong</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="button">
+    <button class="custom-btn btn-11">Click me!<div class="dot"></div></button>
+  </div>
   <div class="star1">
     <div class="star"></div>
   </div>
