--- a/index1.html
+++ b/index1.html
@@ -3,6 +3,7 @@
     <title>Dang xink cho Hoai Luong</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style1.css" />
+    <link rel="icon" type="image/png" href="tree.png" />
   </head>
   <body>
     <div class="container">
