--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Dang xink cho Hoai Luong</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="tree.png" />
   </head>
   <body>
