--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
     <title>Dang xink cho Hoai Luong</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <link rel="icon" type="image/png" href="tree.png" />
   </head>
   <body>
     <div class="container">
-        <audio class="audio" controls autoplay>
-            <source src="Music.mp3" type="audio/mp3">
-          </audio>
       <svg
         version="1.1"
         xmlns="http://www.w3.org/2000/svg"
@@ -1328,5 +1326,10 @@
         <div class="gift-box"></div>
       </div>
       <h1>Merry Christmas !</h1>
+      <div class="bg">
+        <div class="centerer">
+          <a href="#" class="button1" onclick="playMusic()">Click me !!!</a>
+        </div>
+      </div>
   </body>
-</html>
+</html
