--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
           <div class="bg">
             <div class="centerer">
-              <a href="#" class="button1" onclick="playMusic()">Click me !!!</a>
+              <a href="#" class="button1" onclick="playMusic()">Click me</a>
             </div>
           </div>
           <div id="road"></div>
